--- a/index.html
+++ b/index.html
@@ -166,19 +166,29 @@
         </section>
 
         <section id="games">
-            <h2>Our Games</h2>
+             <h2>Our Games</h2>
             <div class="game-category">
                 <h3>2D Games</h3>
                 <ul class="game-list">
-                    <li><a href="game1.html">Rock Identification Challenge</a></li>
-                    <li><a href="game2.html">Weather Pattern Puzzle</a></li>
-                    <li><a href="game3.html">Ocean Currents Adventure</a></li>
-                    <li><a href="game4.html">Volcano Exploration</a></li>
-                    <li><a href="game5.html">Fault Line Mapping</a></li>
+                    <li>🌋 <a href="game1.html">Rock Identification Challenge</a></li>
+                    <li>☁️ <a href="game2.html">Weather Pattern Puzzle</a></li>
+                    <li>🌍 <a href="game5.html">Environmental Impact Quiz</a></li>
                 </ul>
+            </div>
+
+            <div class="game-category">
                 <h3>3D Games</h3>
                 <ul class="game-list">
-                    <li><a href="game3.html">Ocean Currents Adventure</a></li>
+                    <li>🌊 <a href="game3.html">Ocean Currents Adventure</a></li>
+                    <li>🏠 <a href="game4.html">Earthquake Simulator</a></li>
+                </ul>
+            </div>
+
+            <div class="game-category">
+                <h3>VR Games</h3>
+                <ul class="game-list">
+                    <li>🔥 <a href="game6.html">Volcano Eruption Experience</a></li>
+                    <li>🌡️ <a href="game7.html">Climate Change Explorer</a></li>
                 </ul>
             </div>
         </section>
