--- a/index.html
+++ b/index.html
@@ -212,6 +212,9 @@
                 <ul class="game-list">
                     <li>🌊 <a href="game5.html">Ocean Currents Adventure</a></li>
                     <li>🏠 <a href="game6.html">Earthquake Simulator</a></li>
+                    <li>🏠 <a href="game9.html">Eart Layers </a></li>
+                    <li>🏠 <a href="game10.html">Earth Energy</a></li>
+                        
                 </ul>
             </div>
 
