--- a/index.html
+++ b/index.html
@@ -210,10 +210,13 @@
             <div class="game-category">
                 <h3>3D Games</h3>
                 <ul class="game-list">
-                    <li>🌊 <a href="game5.html">Ocean Currents Adventure</a></li>
+                    <li>🏠 <a href="game5.html">Ocean Currents Adventure</a></li>
                     <li>🏠 <a href="game6.html">Earthquake Simulator</a></li>
                     <li>🏠 <a href="game9.html">Eart Layers </a></li>
                     <li>🏠 <a href="game10.html">Earth Energy</a></li>
+                    <li>🏠 <a href="game11.html">Earth Pressure</a></li>
+                    <li>🏠 <a href="game12.html">Eart Vulcano </a></li>
+                    <li>🏠 <a href="game13.html">Earth Magma</a></li>
                         
                 </ul>
             </div>
