--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
                     <li>🏠 <a href="game5.html">Ocean Currents Adventure</a></li>
                     <li>🏠 <a href="game6.html">Earthquake Simulator</a></li>
                     <li>🏠 <a href="game9.html">Eart Layers </a></li>
-                    <li>🏠 <a href="game10.html">Earth Energy</a></li>
-                    <li>🏠 <a href="game11.html">Earth Pressure</a></li>
-                    <li>🏠 <a href="game12.html">Eart Vulcano </a></li>
-                    <li>🏠 <a href="game13.html">Earth Magma</a></li>
+                    <li>🏠 <a href="game10.html">Particles Energy</a></li>
+                    <li>🏠 <a href="game11.html">Particles Merge</a></li>
+                    <li>🏠 <a href="game12.html">Velocity </a></li>
+                    <li>🏠 <a href="game13.html">Vulcano vs Meteors</a></li>
                         
                 </ul>
             </div>
