--- a/index.html
+++ b/index.html
@@ -204,6 +204,11 @@
                     <li>🌋 <a href="game1.html">Rock Identification Challenge</a></li>
                     <li>☁️ <a href="game2.html">Weather Pattern Puzzle</a></li>
                     <li>🌍 <a href="game3.html">Environmental Impact Quiz</a></li>
+                    <li>🌋 <a href="game15.html">Structural Deformation Simulation</a></li>
+                    <li>☁️ <a href="game14.html">Reservoirs Migratoon Simulation Puzzle</a></li>
+                    <li>🌍 <a href="game16.html">Stratigraphy Simulation</a></li>
+                    
+                    
                 </ul>
             </div>
 
