--- a/index.html
+++ b/index.html
@@ -201,12 +201,12 @@
             <div class="game-category">
                 <h3>2D Games</h3>
                 <ul class="game-list">
-                    <li>🌋 <a href="game1.html">Rock Identification Challenge</a></li>
-                    <li>☁️ <a href="game2.html">Weather Pattern Puzzle</a></li>
+                    <li>🌍 <a href="game1.html">Rock Identification Challenge</a></li>
+                    <li>🌍 <a href="game2.html">Weather Pattern Puzzle</a></li>
                     <li>🌍 <a href="game3.html">Environmental Impact Quiz</a></li>
-                    <li>🌋 <a href="game15.html">Structural Deformation Simulation</a></li>
-                    <li>☁️ <a href="game14.html">Reservoirs Migratoon Simulation Puzzle</a></li>
-                    <li>🌍 <a href="game16.html">Stratigraphy Simulation</a></li>
+                    <li>🌍 <a href="game15.html">Reservoirs Migration Simulation</a></li>
+                    <li>🌍 <a href="game14.html">Structural Deformation Simulation Puzzle</a></li>
+                    <li>🌍 <a href="game16.html">Tectonic Force Simulation</a></li>
                     
                     
                 </ul>
