--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@
                     <li>🌍 <a href="game15.html">Reservoirs Migration Simulation</a></li>
                     <li>🌍 <a href="game14.html">Structural Deformation Simulation Puzzle</a></li>
                     <li>🌍 <a href="game16.html">Tectonic Forces Simulation</a></li>
+                    <li>🔥 <a href="game4.html">Tension and Compression </a></li>
+                    <li>🌡️ <a href="game7.html">Directional Explorer</a></li>
                     
                     
                 </ul>
@@ -229,8 +231,8 @@
             <div class="game-category">
                 <h3>VR Games</h3>
                 <ul class="game-list">
-                    <li>🔥 <a href="game4.html">Volcano Eruption Experience</a></li>
-                    <li>🌡️ <a href="game7.html">Climate Change Explorer</a></li>
+                    <li>🔥 <a href="game17.html">Subsurfaces Layering Experience</a></li>
+                    <li>🌡️ <a href="game18.html">Stratigraphy Explorer</a></li>
                 </ul>
             </div>
         </
