--- a/index.html
+++ b/index.html
@@ -231,8 +231,9 @@
             <div class="game-category">
                 <h3>VR Games</h3>
                 <ul class="game-list">
-                    <li>🔥 <a href="game17.html">Subsurfaces Layering Experience</a></li>
-                    <li>🌡️ <a href="game18.html">Stratigraphy Explorer</a></li>
+                    <li>🔥 <a href="game17.html">Subsurfaces Layering Experience (paper)</a></li>
+                    <li>🌡️ <a href="game18.html">Stratigraphy Explorer (paper)</a></li>
+                    <li>🌡️ <a href="game19.html">Stratigraphy Explorer (image)</a></li>
                 </ul>
             </div>
         </
