--- a/game19.html
+++ b/game19.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Markerless Stratigraphy AR</title>
+    <title>Stratigraphy AR </title>
+    <!-- Load A-Frame and MindAR -->
     <script src="https://cdn.jsdelivr.net/npm/aframe@1.4.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar/dist/mindar-aframe.prod.js"></script>
   </head>
   <body style="margin: 0; overflow: hidden;">
     <!-- MindAR Scene -->
-    <a-scene mindar-image="imageTargetSrc: ./target.mind; autoStart: true; uiScanning: false;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: true">
+    <a-scene 
+      mindar-image="imageTargetSrc: ./target.mind; autoStart: true; uiScanning: false;"
+      vr-mode-ui="enabled: false"
+      device-orientation-permission-ui="enabled: true">
+      
+      <!-- Debug Logs -->
+      <script>
+        console.log("AR Scene Loaded");
+        window.addEventListener("error", (e) => {
+          console.error("Error Detected: ", e.message);
+        });
+      </script>
 
-      <!-- Anchor for Markerless Tracking -->
+      <!-- Camera -->
       <a-camera position="0 0 0" look-controls></a-camera>
+
+      <!-- AR Target -->
       <a-entity mindar-image-target="targetIndex: 0">
         
-        <!-- Stratigraphic Layers -->
+        <!-- Stratigraphy Layers -->
         <a-box position="0 0 -2" width="3" height="0.5" depth="3" color="#8B4513"></a-box> <!-- Basement -->
         <a-box position="0 0.5 -2" width="3" height="0.5" depth="3" color="#F4A460"></a-box> <!-- Sandstone -->
         <a-box position="0 1 -2" width="3" height="0.5" depth="3" color="#A9A9A9"></a-box> <!-- Shale -->
@@ -28,14 +42,17 @@
       </a-entity>
     </a-scene>
 
-    <!-- JavaScript for Fault Movement -->
+    <!-- JavaScript for Fault Simulation -->
     <script>
+      console.log("Initializing Fault Simulation...");
       const btn = document.querySelector("#fault-btn");
       const faultLine = document.querySelector("#fault-line");
       let isFaultActive = false;
 
       btn.addEventListener("click", () => {
+        console.log("Fault Button Clicked");
         if (!isFaultActive) {
+          console.log("Moving fault line right...");
           faultLine.setAttribute("position", { x: 0.5, y: 1, z: -1.8 });
           document.querySelectorAll("a-box").forEach((box, index) => {
             if (index > 2) {
@@ -45,6 +62,7 @@
           });
           isFaultActive = true;
         } else {
+          console.log("Resetting fault line...");
           faultLine.setAttribute("position", { x: 0, y: 1, z: -1.8 });
           document.querySelectorAll("a-box").forEach((box, index) => {
             if (index > 2) {
@@ -55,6 +73,16 @@
           isFaultActive = false;
         }
       });
+
+      // Debug camera access
+      navigator.mediaDevices.getUserMedia({ video: true })
+        .then((stream) => {
+          console.log("Camera Access Granted");
+        })
+        .catch((err) => {
+          console.error("Camera Access Error: ", err.message);
+          alert("Camera Error: " + err.message);
+        });
     </script>
   </body>
 </html>
