--- a/index.html
+++ b/index.html
@@ -229,14 +229,14 @@
             </div>
 
             <div class="game-category">
-                <h3>VR Games</h3>
+                <h3>AR/VR Games</h3>
                 <ul class="game-list">
                     <li>🔥 <a href="game17.html">Subsurfaces Layering Experience (paper)</a></li>
                     <li>🌡️ <a href="game18.html">Stratigraphy Explorer (paper)</a></li>
                     <li>🌡️ <a href="game19.html">Stratigraphy Explorer (image)</a></li>
                 </ul>
             </div>
-        </
+        </section>
     <section id="contact">
         <h2>Contact Us</h2>
         <p>Have questions or feedback? Reach out to us at <a href="mailto:managerdata404@gmail.con">managerdata404@gmail.com</a>. We’d love to hear from you!</p>
