--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
         <section id="about">
             <h2>About Us</h2>
-            <p>Explore fun and educational games about geology, meteorology, and environmental science!</p>
+            <p>Explore fun and educational games about geology,geophysics, meteorology, and environmental science!</p>
         </section>
 
         <section id="games">
