--- a/game19.html
+++ b/game19.html
@@ -9,7 +9,7 @@
   <body style="margin: 0; overflow: hidden;">
     <!-- MindAR Scene -->
     <a-scene 
-      mindar-image="imageTargetSrc: target.mind; autoStart: true; uiScanning: false;"
+      mindar-image="imageTargetSrc: ./target.mind; autoStart: true; uiScanning: false;"
       vr-mode-ui="enabled: false"
       device-orientation-permission-ui="enabled: true">
       
