--- a/game18.html
+++ b/game18.html
@@ -1,75 +1,94 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Stratigraphy AR Visualization</title>
-    <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/jeromeetienne/ar.js/aframe/build/aframe-ar.min.js"></script>
-  </head>
-  <body style="margin: 0; overflow: hidden;">
-    <!-- A-Frame Scene -->
-    <a-scene embedded arjs vr-mode-ui="enabled: false">
+<head>
+    <title>Geology AR Demo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Include A-Frame and AR.js from CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aframe/1.4.2/aframe.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ar.js/2.2.2/aframe-ar.min.js"></script>
+    <style>
+        .ar-button {
+            position: fixed;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 999;
+            padding: 10px 20px;
+            background: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        
+        #loading-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+        }
+    </style>
+</head>
+<body style="margin: 0; overflow: hidden;">
+    <div id="loading-screen">
+        <div style="text-align: center;">
+            <h2>Loading AR Experience...</h2>
+            <p>Please allow camera access when prompted</p>
+        </div>
+    </div>
 
-      <!-- Stratigraphic Layers -->
-      <!-- Layer 1 (Basement Rock) -->
-      <a-box position="0 0 -5" width="3" height="0.5" depth="3" color="#8B4513"></a-box>
-      <!-- Layer 2 (Sandstone) -->
-      <a-box position="0 0.5 -5" width="3" height="0.5" depth="3" color="#F4A460"></a-box>
-      <!-- Layer 3 (Shale) -->
-      <a-box position="0 1 -5" width="3" height="0.5" depth="3" color="#A9A9A9"></a-box>
-      <!-- Layer 4 (Limestone) -->
-      <a-box position="0 1.5 -5" width="3" height="0.5" depth="3" color="#D8BFD8"></a-box>
-      <!-- Layer 5 (Top Soil) -->
-      <a-box position="0 2 -5" width="3" height="0.5" depth="3" color="#32CD32"></a-box>
+    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix;">
+        <!-- Rock formation model -->
+        <a-box position="0 0.5 0" 
+               rotation="0 45 0" 
+               material="color: #8B4513"
+               scale="1 1 1"
+               class="clickable"
+               animation="property: rotation; to: 0 405 0; dur: 10000; easing: linear; loop: true">
+            <a-box position="0.5 0 0" 
+                   scale="0.3 0.8 0.2" 
+                   material="color: #A0522D">
+            </a-box>
+            <a-box position="-0.3 0.2 0.3" 
+                   scale="0.2 0.5 0.2" 
+                   material="color: #6B4423">
+            </a-box>
+        </a-box>
 
-      <!-- Fault Line -->
-      <a-cylinder id="fault-line" position="0 1 -4.5" radius="0.05" height="2.5" color="#000000"></a-cylinder>
-
-      <!-- Fault Simulation Button -->
-      <a-plane id="fault-btn" position="0 -1 -3" width="1.5" height="0.5" color="#007BFF" text="value: Simulate Fault; color: white;"></a-plane>
-
-      <!-- Lights -->
-      <a-light type="directional" position="2 4 5" intensity="0.8"></a-light>
-      <a-light type="ambient" intensity="0.5"></a-light>
-
-      <!-- Camera -->
-      <a-entity camera position="0 1.6 0">
-        <a-cursor></a-cursor>
-      </a-entity>
-
-      <!-- Marker for AR -->
-      <a-marker-camera preset="hiro"></a-marker-camera>
+        <!-- Marker -->
+        <a-marker-camera preset="hiro"></a-marker-camera>
     </a-scene>
 
-    <!-- JavaScript for Interaction -->
-    <script>
-      // Fault Simulation
-      const btn = document.querySelector("#fault-btn");
-      const faultLine = document.querySelector("#fault-line");
-      let isFaultActive = false;
+    <button class="ar-button" onclick="toggleRotation()">Toggle Rotation</button>
 
-      btn.addEventListener("click", () => {
-        if (!isFaultActive) {
-          // Move the fault line and create displacement
-          faultLine.setAttribute("position", { x: 0.5, y: 1, z: -4.5 });
-          document.querySelectorAll("a-box").forEach((box, index) => {
-            if (index > 2) { // Move upper layers
-              let pos = box.getAttribute("position");
-              box.setAttribute("position", { x: pos.x + 0.5, y: pos.y, z: pos.z });
+    <script>
+        // Hide loading screen when scene is loaded
+        document.querySelector('a-scene').addEventListener('loaded', function () {
+            document.getElementById('loading-screen').style.display = 'none';
+        });
+
+        // Toggle rotation function
+        let isRotating = true;
+        function toggleRotation() {
+            const rock = document.querySelector('a-box');
+            if (isRotating) {
+                rock.removeAttribute('animation');
+            } else {
+                rock.setAttribute('animation', 'property: rotation; to: 0 405 0; dur: 10000; easing: linear; loop: true');
             }
-          });
-          isFaultActive = true;
-        } else {
-          // Reset the fault line
-          faultLine.setAttribute("position", { x: 0, y: 1, z: -4.5 });
-          document.querySelectorAll("a-box").forEach((box, index) => {
-            if (index > 2) { // Reset upper layers
-              let pos = box.getAttribute("position");
-              box.setAttribute("position", { x: pos.x - 0.5, y: pos.y, z: pos.z });
-            }
-          });
-          isFaultActive = false;
+            isRotating = !isRotating;
         }
-      });
+
+        // Error handling
+        window.addEventListener('camera-error', function(e) {
+            alert('Camera error. Please ensure you have given camera permissions and try again.');
+        });
     </script>
-  </body>
+</body>
 </html>
