--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
                     <li>🔥 <a href="game17.html">Subsurfaces Layering Experience (paper)</a></li>
                     <li>🌡️ <a href="game18.html">Stratigraphy Explorer (paper)</a></li>
                     <li>🌡️ <a href="game19.html">Stratigraphy Explorer (image)</a></li>
+                    <li>🌡️ <a href="game20.html">Seismic Explorer </a></li>
                 </ul>
             </div>
         </section>
